--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>My first website</h3>
+        <h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero numquam quo explicabo, aut soluta eius amet recusandae sapiente earum blanditiis libero nam quia hic cumque ullam. Atque nam aliquam consectetur.</p>
+    </div>
+    <div>
+        <h3>My second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero numquam quo explicabo, aut soluta eius amet recusandae sapiente earum blanditiis libero nam quia hic cumque ullam. Atque nam aliquam consectetur.</p>
+    </div>
+    <div>
+        <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero numquam quo explicabo, aut soluta eius amet recusandae sapiente earum blanditiis libero nam quia hic cumque ullam. Atque nam aliquam consectetur.</p>
     </div>
 </body>
