added a sample photo of CEO

--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
         <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero numquam quo explicabo, aut soluta eius amet recusandae sapiente earum blanditiis libero nam quia hic cumque ullam. Atque nam aliquam consectetur.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <li>git add .</li>
+        <li>git commit -m"add a meaningful commit message</li>
+        <li>git push</li>
+    </div>
+    <div>
+        <h3>CEO is the Boss</h3>
+        <img src="images/ceo.jpg" alt="">
+    </div>
 </body>
 </html>
